mobile version almost completed

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Home Page -->
     <div class="hero">
         <div class="hero__img">
-            <img src = "img/me-towel.jpg" width="80px" height="200px">
+            <img src = "img/me-towel.jpg">
         </div>
         
         <div class="hero__text">
@@ -177,16 +177,25 @@
     </div>
 
 
+    <!-- Contact -->
+    <div class="contact" id="contact">
+        <div class="contact-container">
+            <h4>Get In Touch</h4>
+            <h2>Contact Me</h2>
+        </div>  
+    </div>
 
     <!-- Projects -->
     <div class="projects" id="projects">
-        
+        <div class="projects-main-title">
+            <h4>Browse My Recent</h4>
+            <h2>Projects</h2>
+        </div>
+
+        <h1>COMING SOON</h1>
     </div>
 
-    <!-- Contact -->
-    <div class="contact" id="contact">
 
-    </div>
 
 </body>
 </html>
