--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
      crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Stylesheets -->
-    <link rel = "stylesheet" href = "styles/styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 
     <!-- Favicon -->
-    <link rel = "icon" href = "img/favicon.ico" type = "image/x-icon">
+    <link rel="icon" type="img/x-icon" href="/img/favicon.ico">
 
 </head>
-
 
 <body>
     <!-- Navbar -->
@@ -27,7 +26,7 @@
         <p>JibrilAF</p>
         <ul>
             <a href = "#about"><li>About</li></a>
-            <a href = "#xp"><li>Experience</li></a>
+            <a href = "#experience"><li>Experience</li></a>
             <a href = "#projects"><li>Projects</li></a>
         </ul>
     </nav>
@@ -44,7 +43,10 @@
             <h3>Computer Science Student</h3>
 
             <div class="hero__btns">
-                <button>Download Resume</button>
+                <a href="https://drive.google.com/file/d/1drtU4Ci6scCDjAf2wbvySJd0U3ZwaczI/view" download target="_blank">
+                    <button>Download Resume</button>
+                </a>
+
                 <button>Contact Info</button>
             </div>
 
@@ -87,7 +89,7 @@
     
                         <div class="item experience">
                             <h4>Experience</h4>
-                            <span>1 year</span>
+                            <span>1 year in web development</span>
                             <h5></h5>
                         </div>
                     </div>
@@ -108,14 +110,33 @@
 
 
     <!-- Experience-->
-    <div class="experience">
+    <div class="experience" id="experience">
+        <div class="title">
+            <h2>Explore My</h2>
+            <h3>Experience</h3>
+        </div>
         <div class="experience-container">
             <div class="prog-languages">
-                
+                <div class="prog-languages-title">
+                    <div class="list-of-prog-languages">
+                        <h2>Programming Languages</h2>
+                        <h4>Python</h4>
+                        <h4>Java</h4>
+                        <h4>C</h4>
+                        <h4>HTML/CSS/JavaScript</h4>
+                    </div>
+
+                </div>
             </div>
 
             <div class="frameworks">
-
+                <div class="frameworks-title">
+                    <div class="list-of-frameworks">
+                        <h2>Technologies & Frameworks</h2>
+                        <h4>MySQL</h4>
+                        <h4>SASS/SCSS</h4>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
