Made more spacing

--- a/index.html
+++ b/index.html
@@ -31,6 +31,25 @@
         </ul>
     </nav>
 
+    <!-- Burger menu for mobile-->
+    <!-- <div class="off-screen-menu">
+        <ul>
+            <a href = "#about"><li>About</li></a>
+            <a href = "#experience"><li>Experience</li></a>
+            <a href = "#projects"><li>Projects</li></a>
+        </ul>
+    </div>
+
+    <nav>
+        <div class="burger-menu">
+            <span>
+                <a href = "#about">About</a>
+            </span>
+            <span></span>
+            <span></span>
+        </div>
+    </nav> -->
+
     <!-- Home Page -->
     <div class="hero">
         <div class="hero__img">
@@ -84,12 +103,15 @@
                         <div class="item education">
                             <h4>Education</h4>
                             <span>Pursuing a B.Sc in Computer Science</span>
+                            <span>Graduated with a High School Diploma in 2022</span>
                             <h5></h5>
                         </div>
     
                         <div class="item experience">
                             <h4>Experience</h4>
                             <span>1 year in web development</span>
+                            <span>Object-Oriented design principles</span>
+                            <span>Low-Level Programming</span>
                             <h5></h5>
                         </div>
                     </div>
@@ -135,6 +157,7 @@
                         <h2>Technologies & Frameworks</h2>
                         <h4>MySQL</h4>
                         <h4>SASS/SCSS</h4>
+                        <h4>Linux OS</h4>
                     </div>
                 </div>
             </div>
@@ -153,6 +176,8 @@
     </div>
 
 
+    <!-- JavaScript files-->
+    <script src = "index.js"></script>
 
 </body>
 </html>
