Contact Page finished
This marks the end of Version 1

--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,83 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel = "stylesheet" href = 
+    <link rel = "stylesheet" href="/styles/contact-styles.css" >
+    <link rel="stylesheet" 
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
-    
+    <div class="contact-header">
+        <h1>Contact Info</h1> 
+        <h3>Here are some places you can reach me</h3>
+    </div>
+
+    <div class="contact-container">
+        <div class="contact-details">
+
+            <!--Address-->
+            <div class="address-container">
+                <div class="address-icon">
+                    <i class="fa-solid fa-map-pin"></i>
+                </div>
+
+                <div class="address">
+                    <p class="section-title">Address</p>
+                    <p>110 University Drive</p>
+                    <p>Monaca, PA</p>
+                    <p>United States of America</p>
+                </div>
+            </div>
+            
+            <!--Phone-->
+            <div class="phone-container">
+                <div class="phone-icon">
+                    <i class="fa-solid fa-phone"></i>
+                </div>
+
+                <div class="phone">
+                    <p class="section-title">Phone</p>
+                    <p>+1 (412) 478-9202</p>
+                </div>
+            </div>
+
+            <!--Email-->
+            <div class="email-container">
+                <div class="email-icon">
+                    <i class="fa-solid fa-envelope"></i>
+                </div>
+
+
+                <div class="email">
+                    <p class="section-title">Email</p>
+                    <p>jibrilBA04@gmail.com</p>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="send-message">
+            <h2>Send me a message!</h2>
+            <div class="send-message-inner">
+                <div class="input-container">
+                    <input placeholder="Full Name">
+                    <input placeholder="Email">
+                    <input placeholder="Type your message...">
+                </div>
+
+                <div class="send-message-btn">
+                    <button class="send-btn">Send</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="back-to-home">
+        <a href="index.html">
+            <button>Back to Home</button>
+        </a>
+    </div>
+
+    <!-- JavaScript Files-->
+    <script src="/js/contact.js"></script>
 </body>
 </html>
