--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 </head>
 
 <body>
+
     <!-- Navbar -->
     <nav class = "nav__container">
         <p>JibrilAF</p>
@@ -62,11 +63,13 @@
             <h3>Computer Science Student</h3>
 
             <div class="hero__btns">
-                <a href="https://drive.google.com/file/d/1drtU4Ci6scCDjAf2wbvySJd0U3ZwaczI/view" download target="_blank">
+                <a href="https://drive.google.com/file/d/1drtU4Ci6scCDjAf2wbvySJd0U3ZwaczI/view?usp=drive_link" download target="_blank">
                     <button>Download Resume</button>
                 </a>
 
-                <button>Contact Info</button>
+                <a href="contact.html">
+                    <button>Contact Info</button>
+                </a> 
             </div>
 
             <div class="hero__links">
@@ -75,7 +78,7 @@
                     <i class="fa-brands fa-linkedin-in"></i>
                 </a>
 
-                <a href = "https://github.com/jibril04Afaa" target = "_blank">
+                <a href = "https://github.com/jibril04Afaa" target="_blank">
                     <i class="fa-brands fa-github"></i>
                 </a>
             </div>
@@ -177,7 +180,7 @@
 
 
     <!-- JavaScript files-->
-    <script src = "index.js"></script>
+    <script src = "/js/index.js"></script>
 
 </body>
 </html>
