--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact Page</title>
+    <!-- Stylesheets -->
     <link rel = "stylesheet" href="/styles/contact-styles.css" >
     <link rel="stylesheet" 
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+    <!-- Favicon -->
+    <link rel="icon" type="img/x-icon" href="/img/favicon.ico">
+    
 </head>
 <body>
     <div class="contact-header">
