Okay NOW V1 is complete

--- a/index.html
+++ b/index.html
@@ -112,14 +112,14 @@
     
                         <div class="item experience">
                             <h4>Experience</h4>
-                            <span>1 year in web development</span>
-                            <span>Object-Oriented design principles</span>
-                            <span>Low-Level Programming</span>
+                            <span>Adept in Web Development</span>
+                            <span>Skillfull in Object-Oriented design principles</span>
+                            <span>Knowledgeable in Low-Level Programming</span>
                             <h5></h5>
                         </div>
                     </div>
                     <div class="text">
-                        Outside of school, I like to write, and you can access some of my writing here.
+                        Outside of school, I like to write on philosophy and on myself, and you can access some of my writing here.
                     </div>
 
                     <div class="writing-btn">
